refactor: change from payments to conversions
